force-app/main/default/objects/Products__c/fields/Available_In__c.field-meta.xml
<CustomField>
    <fullName>Available_In__c</fullName>
    <label>Available In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>