force-app/main/default/objects/Products__c/fields/Blurb__c.field-meta.xml
<CustomField>
    <fullName>Blurb__c</fullName>
    <label>Blurb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>