force-app/main/default/objects/Products__c/fields/Catalog_Image__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Image__c</fullName>
    <formula>IMAGE(IF(ISBLANK( Image_Document_Id__c ), &quot;/resource/NoImage&quot;, &quot;/servlet/servlet.FileDownload?file=&quot; &amp;  Image_Document_Id__c ), &quot;Image Name&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog Image</label>
    <type>Text</type>
</CustomField>