force-app/main/default/objects/Products__c/fields/Default_Price__c.field-meta.xml
<CustomField>
    <fullName>Default_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>