force-app/main/default/objects/Products__c/fields/Image_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Document_Id__c</fullName>
    <label>Image Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>