force-app/main/default/objects/Products__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <label>QuantityUnitOfMeasure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Pieces</fullName>
            </value>
            <value>
                <fullName>bottles</fullName>
            </value>
            <value>
                <fullName>Cottons</fullName>
            </value>
            <value>
                <fullName>Packets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>