force-app/main/default/objects/Products__c/fields/VF_Image__c.field-meta.xml
<CustomField>
    <fullName>VF_Image__c</fullName>
    <formula>IF(ISBLANK( Image_Document_Id__c ), &quot;/resource/ProductCatalogResources/ProductCatalog/Images/NoImage.png&quot;, &quot;/servlet/servlet.FileDownload?file=&quot; &amp;  Image_Document_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VF Image</label>
    <type>Text</type>
</CustomField>