force-app/main/default/objects/Products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Family__c</columns>
    <columns>IsActive__c</columns>
    <columns>QuantityUnitOfMeasure__c</columns>
    <columns>StockKeepingUnit__c</columns>
    <columns>Available_In__c</columns>
    <columns>Blurb__c</columns>
    <columns>Default_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>