force-app/main/default/objects/Products__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Max_Qty__c</columns>
    <columns>Min_Qty__c</columns>
    <columns>StockKeepingUnit__c</columns>
    <columns>Family__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>